# fracture

./: .clang-format  .gitignore  CMakeLists.txt  todo.md
imgui/: CMakeLists.txt
shader/: fractal.frag  fullscreen.vert
shaders/: CMakeLists.txt  shader.slang
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp  core.hpp
src/main/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  ui.cpp
src/util/: Basics.hpp  CMakeLists.txt  Log.hpp
src/vulkan/: CMakeLists.txt  Vertices.hpp  VulkanContext.cpp  VulkanContext.hpp  test.cpp
